--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "hello-x-app",
   "version": "0.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "electron:start": "npm-run-all -p electron:serve",
+    "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
+    "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "test": "ng test"
   },
   "private": true,
@@ -18,8 +22,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "npm-run-all": "^4.1.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "wait-on": "^6.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,6 +35,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "electron": "^14.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
